source/styles/blocks/site-navigation.scss
.site-navigation {
  position: absolute;
  top: 10px;
  left: 234px;
  right: 10px;
  z-index: -1;

  display: flex;
  flex-direction: column;
  width: 76px;
  height: 36px;
  min-height: 36px;
  padding: 10px;

  background-color: $color-white;

  border: 1px solid $color-gray;
  border-radius: 14px;

  overflow: hidden;
  opacity: 0;
  visibility: hidden;

  transition: left $tr-default 0.3s, top $tr-default, width $tr-default 0.3s, height $tr-default, min-height $tr-default, opacity $tr-default 0.3s, visibility $tr-default 0.3s, border-radius $tr-default;

  @media #{$tablet-only} {
    top: 20px;
    left: 669px;

    width: 89px;
    height: 46px;
    padding: 20px;

    border-radius: 16px;
  }

  @media #{$desktop-only} {
    top: 20px;
    left: 1049px;

    width: 101px;
    height: 46px;
    padding: 20px;

    border-radius: 16px;
  }

  @media #{$large-desktop-only} {
    top: 20px;
    left: 1688px;

    width: 162px;
    height: 74px;
    padding: 20px;

    border-width: 2px;
    border-radius: 25px;
  }

  // &.site-navigation--header {

  // }

  &.site-navigation--is-open {
    left: 10px;
    z-index: 999999;

    width: 300px;
    min-height: 150px;

    border-radius: 20px;

    opacity: 1;
    visibility: visible;

    transition: left $tr-default, top $tr-default 0.3s, width $tr-default, height $tr-default 0.3s, min-height $tr-default 0.3s, opacity $tr-default, visibility $tr-default, border-radius $tr-default 0.3s;

    @media #{$tablet-only} {
      left: 403px;

      width: 355px;
      min-height: 250px;

      border-radius: 25px;
    }

    @media #{$desktop-only} {
      top: 10px;
      left: 781px;

      width: 389px;
      min-height: 250px;

      border-radius: 25px;
    }

    @media #{$large-desktop-only} {
      top: 10px;
      left: 1268px;

      width: 602px;
      min-height: 300px;

      border-radius: 40px;
    }
  }
}

.site-navigation__pages-list {
  margin: 46px 0 10px;

  @media #{$tablet-only} {
    margin-top: 66px;
  }

  @media #{$desktop-only} {
    margin-top: 83px;
  }

  @media #{$large-desktop-only} {
    margin-top: 114px;
  }
}

.site-navigation__line {
  margin: auto -10px 10px;

  @media #{$tablet-only} {
    margin: auto -20px 10px;
  }

  @media #{$desktop-only} {
    margin: auto -20px 10px;
  }

  @media #{$large-desktop-only} {
    margin: auto -20px 20px;
  }
}

.site-navigation__footer {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 10px;
}

.site-navigation__contact-container {
  display: flex;
  flex-direction: column;
  margin: 0;
}

.site-navigation__title-link {
  font-weight: 500;
  font-size: 10px;
  color: $color-black;

  opacity: 0.5;

  @media #{$tablet-only} {
    font-size: 12px;
  }

  @media #{$desktop-only} {
    font-size: 12px;
  }

  @media #{$large-desktop-only} {
    font-size: 20px;
  }
}

.site-navigation__link {
  font-weight: 600;
  font-size: 12px;
  color: $color-black;

  transition: color $tr-default, opacity $tr-default;

  @media #{$tablet-only} {
    font-size: 16px;
  }

  @media #{$desktop-only} {
    font-size: 16px;
  }

  @media #{$large-desktop-only} {
    font-size: 25px;
  }

  @media #{$hover} {
    &:hover {
      color: $color-brown;
    }
  }

  &:active {
    color: $color-brown;

    opacity: 0.5;
  }
}

